fix + logic for visik